--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 /*@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);*/
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300);
 
-/*body{
-  font-family: 'PT Sans Narrow', sans-serif;
-}*/
+body{
+  /*font-family: 'PT Sans Narrow', sans-serif;*/
+  font-family: 'Source Sans Pro', sans-serif;
+}
 .tm-header{
   padding: 10px;
   background-color: #263238;
@@ -95,23 +97,32 @@ div .text{
   padding-top: 25px;
 }
 .section-slider{
-  margin-left: 30px;
-  margin-right: 55px;
+  margin-left: 40px;
+  margin-right: 65px;
 }
 .sub-pages{
-  padding: 10;
+  padding: 15px;
   background-color: #4CAF50;
   font-size: 17px;
 }
 .sub-pages .link-sub{
-  border: 1px solid #fff;
-  padding: 50px 30px 50px 30px;
   color: #ddd;
-  /*width: 126px;
-  height: 163px;*/
-
+  text-decoration: none;
 }
-.sub-pages .uk-width-1-3{
-  margin-top: 70px;
-  padding-right: 0;
+.square{
+  border: 1px solid #bdc3c7;
+  width: 126px;
+  height: 163px;
+}
+.square:hover{
+  background-color: rgba(189, 195, 199, .6)
+}
+.square i{
+  margin-top: 45%;
+  margin-left: 34%;
+}
+.square p{
+  text-align: center;
+  font-weight: bold;
+  color: rgba(68, 68, 68, .7);
 }
