--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ hr{
 }
 
 /* Footer */
-/*.tm-footer{
+.tm-footer{
   background-color: #263238;
 }
 .logo .tm-site-branding{
@@ -213,12 +213,44 @@ hr{
 }
 
 .footer-links{
-  margin-top: 10px;
+  margin-top: 20px;
   text-align: center;
 }
-.footer-links a{
-  margin-right: 30px;
-  padding: 20px;
-  border: 1px solid #fff;
+.link-border{
+  position: relative;
+  display: inline-block;
+  border: 1px solid #95a5a6;
+  width: 40px;
+  height: 40px;
+  margin-right: 50px;
+  color: #95a5a6;
   transform: rotate(45deg);
+}
+.link-border:hover{
+  background-color: #ddd;
+}
+.link-border i{
+  transform: rotate(-45deg);
+}
+.footer-links i{
+  margin-top: 20%;
+  /*margin-right: 30px;
+  padding: 10px;
+  border: 1px solid #fff;
+  transform: rotate(45deg);*/
+}
+.up-link{
+  float: right;
+  margin-right: 10px;
+  border: medium double #fff;
+  padding: 10px;
+  color: #fff;
+  background-color: #4cAf50;
+}
+
+/*.up-link a{
+  /*width: 50px;
+  height: 50px;
+  border: 1px solid #fff;
+  padding: 10px;
 }*/
