--- a/style.css
+++ b/style.css
@@ -128,11 +128,18 @@ div .text{
   color: rgba(68, 68, 68, .7);
 }
 
+.uk-width-1-3 {
+  padding-left: 0;
+}
+
 @media only screen and (max-width: 768px) {
   .square{
     width: 80px;
     height: 120px;
     font-size: 13px;
+  }
+  .slider{
+    display: none;
   }
 }
 
@@ -277,7 +284,7 @@ hr{
 .header-pages{
   text-align: center;
   height:200px;
-  background-color: #ddd;
+  background-color: #ccc;
   font-family: 'Source Sans Pro', sans-serif;
 }
 .header-pages .uk-article-title{
